RestaurantManagement/src/objects/RawMaterial__c.object
<CustomObject>
    <fields>
        <fullName>Available__c</fullName>
        <formula>QuantityRollup__c  -  Used__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Available</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Inventory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory</label>
        <referenceTo>Inventory__c</referenceTo>
        <relationshipLabel>RawMaterials</relationshipLabel>
        <relationshipName>RawMaterials</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QuantityRollup__c</fullName>
        <label>QuantityRollup</label>
        <summarizedField>Purchase__c.Quantity__c</summarizedField>
        <summaryForeignKey>Purchase__c.RawMaterial__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Used__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Used</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>RawMaterial</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RawMaterial Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RawMaterials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>